# pickerel

./: Cargo.toml  LICENSE  README.md  RUN.md
src/: main.rs
src/engine/: chess_engine.rs  computer_player.rs  engine.rs  mod.rs
src/evaluators/: end.rs  mod.rs  naive.rs  null.rs
src/state/: board.rs  state.rs
