[package]
name = "pickerel"
version = "0.1.0"
edition = "2021"

authors = ["Max Fan <root@max.fan>", "Aidan Glickman <aidan@aidanglickman.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chess = "3.2.0"
# serde = "1.0.130"
# serde_json = "1.0.69"
